--- a/.github/config.yml
+++ b/.github/config.yml
@@ -8,6 +8,7 @@ requestInfoReplyComment: >
 # Or an array:
 # requestInfoReplyComment:
 #  - Ah no! young blade! That was a trifle short!
+#  - Thanks for the help!
 #  - Tell me more !
 #  - I am sure you can be more effusive
 
