--- a/.github/config.yml
+++ b/.github/config.yml
@@ -3,4 +3,4 @@
 # *OPTIONAL* Comment to reply with
 # Can be either a string :
 requestInfoReplyComment: >
-  We would appreciate it if you could provide us with more info about this issue, and thanks in advance/pr!
+  We all would appreciate it if you could provide us with more info about this issue, and thanks in advance/pr!
